src/styles/Header.module.scss
@import "_constants.scss";

.logo {
    font-family: 'Josefin Slab', sans-serif;
    text-transform: uppercase;
    margin: 0;
    margin-left: 2rem;
    position: absolute;
    left: 0;
    color: $black;
}
header {
    padding: 1.5rem 0;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    background: white;
}
nav {
    background-color: $cream;
    border-radius: 35px;
    ul {
        padding: 0.6rem 2rem;
        display: flex;
        justify-content: space-around;
        list-style: none;
        li {
            position: relative;
            padding: 0 1rem;
            text-transform: uppercase;
            .navLink {
                text-decoration: none;
                color: $grey;
            }
            ul {
                border-left: 1px solid $grey;
                padding: 0;
                flex-direction: column;
                align-items: flex-start;
                position: absolute;
                background-color: $cream;
                display: none;
                animation: fadeIn 0.2s ease-in-out;
                li {
                    top: 15px;
                    padding: 0.5rem;
                    background-color: $cream;
                    a {
                        color: $grey;
                        text-decoration: none;
                        text-transform: none;
                        white-space: nowrap;
                        font-weight: 400;
                    }
                }
            }
            &:hover {
                ul {
                    display: flex;
                }
            }
        }
    }
}

@media (max-width: 768px) {
    header {
        flex-direction: column;
        nav {
            ul {
                padding: 0.4rem;
                li {
                    font-size: 0.6rem;
                }
            }
        }
    }
    .logo {
        position: relative;
        margin-bottom: 1rem;
    }
}

